[package]
name = "gd32vf103-demo"
version = "0.1.0"
authors = ["Martin Disch <martindisch@gmail.com>"]
edition = "2018"

[dependencies]
panic-halt = "0.2.0"
riscv = "0.5.4"
riscv-rt = "0.6.1"
embedded-hal = "0.2.3"
gd32vf103-hal = { git = "https://github.com/gd32v-rust/gd32vf103-hal", rev = "892cb47ffd3a8cdf0fa2b51f9af402be6bfc4f53" }

# this lets you use `cargo fix`!
[[bin]]
name = "gd32vf103-demo"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true      # symbols are nice and they don't increase the size on Flash
lto = true        # better optimizations
